--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 							<article id="one">
 								<h2 class="major">Keele Woods</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>With the sun shining and ​the birds singing,​ there are fewer places better to ​relax than around ​the eight lakes of Keele. Keele woods is planted predominantly with Pedunculate Oak, with scattered Beech, Yew and Sycamore.​ Bluebells form an impressive carpet in spring​.​</p>
 								<!-- <p><audio loop><source src="audio/woods.WAV" type="audio/mpeg">Your browser does not support the audio element.</audio><br />Play, sit back, relax! The audio will loop :)<p/> -->
 							</article>
 
 						<!-- two -->
 							<article id="two">
-								<h2 class="major">The Library - Group Study</h2>
+								<h2 class="major">The Library</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Relax to the familiar sounds of Group Study in our 24 hour library. Founded in 1962, our award winning library is a hive of student activity and full of memories.</p>
 								<!-- <p><iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/247527385&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></p> -->
 							</article>
 
@@ -59,14 +59,14 @@
 							<article id="three">
 								<h2 class="major">Munch</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>​​​Need a morning coffee to wake you up or having a catchup with a friend? Settle in for a scrumptious meal and a refreshing coffee from Munch​.</p>
 							</article>
 
 						<!-- four -->
 							<article id="four">
 								<h2 class="major">The Squirrel</h2>
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Relax in chilled surroundings with your mates in The Scruffy Squirrel. Have a game of pool, a bite to eat or a quick drink.</p>
 							</article>
 
 						
