Change to footer links ut,

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Keele University. Template: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; <a href="https://www.keele.ac.uk/?utm_source=campaign&utm_medium=microsite&utm_campaign=soundsofkeele">Keele University.</a> Template: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
